# app

./: CMakeLists.txt  README.md  deps.cmake  sources.cmake
blogic/: sources.cmake
cmake/: include.cmake  sources.cmake  test.cmake
control/: sources.cmake
data/: sources.cmake
docs/: README.md
messaging/: sources.cmake
network/: sources.cmake
src/: connectors.cpp  control.cpp  frontshell.cpp  fsmconnections.h  main.cpp  messaging.cpp  messaging.h  middle.cpp
tests/: CMakeLists.txt
ui/: sources.cmake
